--- a/index.html
+++ b/index.html
@@ -1,70 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8DZNMCFGBW"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-8DZNMCFGBW');
-    </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simon Kim</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.5.0/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/neue-haas-grotesk-display-pro">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chat About</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <link rel="preload" href="image1.jpg" as="image">
+  <link rel="preload" href="image2.jpg" as="image">
+  <link rel="preload" href="image3.jpg" as="image">
+  <link rel="preload" href="image4.jpg" as="image">
+  <link rel="preload" href="image5.jpg" as="image">
+  <link rel="preload" href="image6.jpg" as="image">
+  <link rel="preload" href="image7.jpg" as="image">
 </head>
 <body>
-    <div class="mobile-nav-container">
-        <div class="mobile-nav-header">
-            <h1 class="mobile-title"><a href="home.html">Simon Kim</a></h1>
-            <div class="mobile-nav-toggle">
-                <i class="bi bi-list"></i>
-            </div>
-        </div>
-        <nav class="mobile-sidebar">
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="ceramics.html">Ceramics</a></li>
-                <li><a href="drawing.html">Drawing</a></li>
-                <li><a href="painting.html">Painting</a></li>
-                <li><a href="digitalmedia.html">Digital Media</a></li>
-                <li><a href="performance.html">Performance</a></li>
-                <li><a href="documents.html">Documents</a></li>
-                <li><a href="archive.html">Archive</a></li>
-                <li><a href="trip.html">Trip</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="container">
-        <nav class="sidebar">
-            <h1><a href="home.html">Simon Kim</a></h1>
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="ceramics.html">Ceramics</a></li>
-                <li><a href="drawing.html">Drawing</a></li>
-                <li><a href="painting.html">Painting</a></li>
-                <li><a href="digitalmedia.html">Digital Media</a></li>
-                <li><a href="performance.html">Performance</a></li>
-                <li><a href="documents.html">Documents</a></li>
-                <li><a href="archive.html">Archive</a></li>
-                <li><a href="trip.html">Trip</a></li>
-            </ul>
-        </nav>
-        <main class="content">
-            <div class="content-wrapper">
-                <h2 id="page-title"></h2>
-                <div id="content">
-                    <!-- Content will be loaded here by JavaScript -->
-                </div>
-            </div>
-        </main>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="script.js"></script>
+  <div class="container">
+      <div class="title-container">
+          <h1 class="title" id="heading" data-href="about.html"> chat about <br> 22 - 23 </h1>
+      </div>
+      <img src="image1.jpg" class="draggable" id="iona" data-href="iona.html">
+      <img src="image2.jpg" class="draggable" id="tianjiao" data-href="tianjiao.html">
+      <img src="image3.jpg" class="draggable" id="miao" data-href="miao.html">
+      <img src="image4.jpg" class="draggable" id="qianyu" data-href="qianyu.html">
+      <img src="image5.jpg" class="draggable" id="kyrin" data-href="kyrin.html">
+      <img src="image6.jpg" class="draggable" id="ceyhun" data-href="ceyhun.html">
+      <img src="image7.jpg" class="draggable" id="betty" data-href="betty.html">
+      <img src="image8.jpg" class="draggable" id="ctaitai" data-href="taitai.html">
+  </div>
+  
+  <script src="script.js">
+  </script>
+
 </body>
 </html>
