images, cardboard setup

--- a/index.html
+++ b/index.html
@@ -8,27 +8,26 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-  <link rel="preload" href="image1.jpg" as="image">
-  <link rel="preload" href="image2.jpg" as="image">
-  <link rel="preload" href="image3.jpg" as="image">
-  <link rel="preload" href="image4.jpg" as="image">
-  <link rel="preload" href="image5.jpg" as="image">
-  <link rel="preload" href="image6.jpg" as="image">
-  <link rel="preload" href="image7.jpg" as="image">
+  <link rel="preload" href="morphology.jpg" as="image">
+  <link rel="preload" href="narcissus.jpg" as="image">
+  <link rel="preload" href="todem.jpg" as="image">
+  <link rel="preload" href="relic.jpg" as="image">
+  <link rel="preload" href="hansel.jpg" as="image">
+  <link rel="preload" href="immai.jpg" as="image">
+  <link rel="preload" href="trip.jpg" as="image">
 </head>
 <body>
   <div class="container">
       <div class="title-container">
-          <h1 class="title" id="heading" data-href="about.html"> chat about <br> 22 - 23 </h1>
+          <h1 class="title" id="heading" data-href="about.html"> leeguhn </h1>
       </div>
-      <img src="image1.jpg" class="draggable" id="iona" data-href="iona.html">
-      <img src="image2.jpg" class="draggable" id="tianjiao" data-href="tianjiao.html">
-      <img src="image3.jpg" class="draggable" id="miao" data-href="miao.html">
-      <img src="image4.jpg" class="draggable" id="qianyu" data-href="qianyu.html">
-      <img src="image5.jpg" class="draggable" id="kyrin" data-href="kyrin.html">
-      <img src="image6.jpg" class="draggable" id="ceyhun" data-href="ceyhun.html">
-      <img src="image7.jpg" class="draggable" id="betty" data-href="betty.html">
-      <img src="image8.jpg" class="draggable" id="ctaitai" data-href="taitai.html">
+      <img src="morphology.jpg" class="draggable" id="morphology" data-href="morphology.html">
+      <img src="narcissus.jpg" class="draggable" id="narcissus" data-href="narcissus.html">
+      <img src="todem.jpg" class="draggable" id="todem" data-href="todem.html">
+      <img src="relic.jpg" class="draggable" id="relic" data-href="relic.html">
+      <img src="hansel.jpg" class="draggable" id="hansel" data-href="hansel.html">
+      <img src="immai.jpg" class="draggable" id="immai" data-href="immai.html">
+      <img src="trip.jpg" class="draggable" id="trip" data-href="trip.html">
   </div>
   
   <script src="script.js">
