--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
     <div class="content-container">
         <h1 class="about-title">leeguhn</h1>
-        <p class="about-text">is a workshop that connects artists and scholars in order to provide space for inter-disciplinary discourse, notably with an emphasis on thinking alongside practice and theory at the University of Chicago. Each academic year, Chat About brings artists and scholars into pairs or small groups according to their interests and needs. Methodology workshops and open studio sessions are planned to prepare our participants to collaboratively conduct fruitful studio visits and conversations. Each pair or group will then present the outcome of their relationship to the public in the form they choose (to date, we have had casual dialogue, live performances, and lectures). Participants also have the opportunity to archive their collaboration through writing; this material is collected, edited, and released as an annual publication.
+        <p class="about-text">I am a 
         
         <br></br> Chat About sessions involve those who are MFA and MAPH candidates at the Departments of Visual Arts and Art History at the time of their participation. This website is dedicated to sessions that took place throughout the 2022 - 2023 academic year. For previous editions, please visit <a href="www.chatabout.info">www.chatabout.info</a>.
         </p>
