--- a/narcissus.html
+++ b/narcissus.html
@@ -7,30 +7,29 @@
 </head>
 <body>
   <div class="content-container">
-      <p><b>Elvin Meng</b> is a joint PhD student in the Department of Comparative Literature and the Department of East Asian Languages & Civilizations at the University of Chicago. His research interests include East Asian & European thought, media history & theory, translation, Manchu studies, history of linguistics & mathematics, and modernism.</p>
-      <p><b>Tianjiao Wang</b> is an artist and currently a second-year graduate student in the Department of Visual Arts at The University of Chicago. Curiosity and a desire for intimacy fuel Tianjiao's drive in her image-making. She establishes affinity by revisiting people, objects, and landscapes. Her practice encompasses various mediums, including photography, film, and installation.</p>
-      <hr color=000000 size="2" width="100%">
-  <p><i>Open Problems</i> by Elvin Meng</p>
+    <p>
+        <center><i>Narcissus</i></center>
+    </p>
+    <br>
+    <div class="image-row">
+        <img alt="default" src="narcissus-images/bigger.jpeg">
+    </div>
   <p>
-  <i>Journey to the West</i> tells of an almighty monkey, confident in his magical powers to traverse through heavenly winds and clouds, who could not leap outside the cosmic palm of Tathāgata the Buddha. Without knowing the unparalleled prowess of the divinity he now faces, the arrogant animal-who had until then made fools of celestial soldiers sent to subdue him-dashed across vast expanses of land and sea to the edge of the world in an attempt to boast his unboundedness or his freedom. To mark his achievement, he took off his pants and started urinating on one of the five massive pillars of flesh erected there, thinking no one but him have traveled so far from the world of the known. But when he returned to narrate with pride his exploits, he found only an enraged Buddha ready to crush him with the weight of a mountain, for he had unknowingly urinated on one of the fingers of Tathāgata.</p>
+    <b>Narcissus</b> is an interactive simulation in which personal choices manifest as architectural structures in real time. Players build their environments by passing through doors and mirrors, shaping their world through room alignments, rotations, and scale shifts. Each decision determines the evolving blueprint of their space.
+  </p>
 
-  <p>The monkey was then entombed alive in a mountain, sealed by a magical inscription. That mantra, if I may change a few words of the novel, could have been a trite observation about the mechanics of language: that the answer to a question is but the question itself inversed. (E.g. Does it? It does.) The open palm gives life to a world of the feasible, but when the feasible is pushed to its limit (those who manage to do it have surely earned their right to urinate!) nothing but the flesh pillars come into sight. And then the hand closes. A whimper.</p>
+  <p><b>Core Mechanics</b></p>
+  <p>I. <i>Rooms & Doors</i>: Each room has three doors—one expands the building, one loops back, and one transforms into a mirror</p>
+  <p>II. <i>Mirror Rooms</i>: Entering a mirror shifts dimensions, triggering changes in scale, rotation, or directional flow of ladders  </p>
+  <p>III. <i>Dimensional Shifts</i>: Nearly every action alters the simulation’s mechanics for a dynamic, evolving experience.  </p><br>
   <div class="image-row">
-      <img alt="in theory, it is feasible" src="tianjiao-images/theory.jpg">
-  </div>
-  <p>That poor thing-unkept and undignified, and deeply unhappy when he was found again five hundred years later-was what came into my mind when Tianjiao described to me her explorations of possibility in <i>In Theory, it is Feasible </i>(2021). ("Theory," I notice, is capitalized, and "it" is not. But forgive me: typographical paranoia is for me an occupational hazard.) I have come to know two works from the project, both of which designed to draw the beholder in and engage with the project on <i>its</i> own terms: one ("Board Game") takes the form of an installation animated by a number of willing participants, and the other ("Gatsby") the form of a point & click adventure game that gives the appearance of an archival artifact from the earliest days of personal computing.</p>
-  <div class="image-row">
-      <img alt="board game" src="tianjiao-images/board1.jpg">
-      <img alt="gatsby" src="tianjiao-images/gatsby.jpg">
-  </div>
-  <p>As a rule, the rules of Tianjiao's games are simple, so simple that they can come off as laboratory experiments on a hypothesis unknown. So many passengers, so many outcomes. Or: so many geometrical arrangements, the asymptotic certainty of a conclusion. Yet, contrary to <i>prima facie</i> impressions, the longer one stays within the game, the less one is certain about what kind of game is being played, by whom and upon whom. And if the realization finally arrives, it is after the return to a gentler Buddha. As a participant will notice sooner or later, it is always in the process of exhaustion-of possible fates, of permitted movements, of attention or of time-that something post-ludic, something post-possible becomes thinkable; or rather, that something can no longer be kept in the un-thought.</p>
-  <div class="image-row">
-      <img alt="journey in, journey out" src="tianjiao-images/inout.jpg">
-  </div>
-  <p>But what is it? What is the thought that comes after the exhaustion of the resources of the possible? The mathematician of totality only smiles. And the palm expands: with <i>Journey in, journey out</i> (2023), the installation space itself becomes saturated by mousetraps for the Real. The VR-adjacent experience induced by projections onto the four walls, the long takes by an immobile camera of an everyday locale that reminds one of 24-hour YouTube live-streams of surveilled civilian life (at Japan's Shinjuku crossing, for example), and the rectangular frames within frames that renders the border of the moving image itself less salient, almost invisible in the dark room in which the exhibition takes place.</p>
-  <p>But furthermore, it is not only the installation space and its visitors who are enclosed by the project, but also the artist herself. The filming at Promontory Point took place over the span of months, when at regular and irregular intervals Tianjiao stood at the pre-selected locations for hours at a time, held still by the <i>mise-en-scene</i> consisting of tunnels, camera, and passers-by. The ensemble, so to speak, assumed a kind of coherence that held itself together, wrapping up the artist, her environs, and the future viewers in its rhythm. And this rhythm in turns creates a different sensation of space, a different diagramming of what it offered only to capture. And it held itself steady until the novel diagram of Hyde Park, on one evening, stood silently against the approaching headlights of a police car.</p>
-  <p>In our conversations, Tianjiao has sometimes spoken about the sensation of mathematics, what it feels like to embark on a train of thought knowing some solution to the question-however difficult to imagine, counterintuitive to the intellect, or circuitous to reach-awaits at the end. I must confess that that sensation (or, for that matter, the practice of mathematics) is not alien to me; yet-in the same way a mathematician's seasoned senses often far outrun the steady march of her deductive reasoning-it would seem that Tianjiao's work as much present <i>questions</i> as it does respond to <i>problems</i>. And unlike questions, problems do not have solutions. Instead, they persist despite having demonstrated again and again the insufficiency of the mathematician's instruments. And they call for the proliferation of novel constructions, each with its own field of rationality, that Tianjiao's art puts forth.</p>
-  <p>Oṃ maṇi padme hūṃ.</p>
+    <img alt="default" src="narcissus-images/mirror.jpg">
+    </div>
+  <p><b>Conceptual Foundations</b></p>
+  <p>Narcissus draws from quantum mechanics, psychology, and mythology to explore perception, identity, and transformation. Inspired by quantum superposition, mirrors act as gateways to alternate possibilities, where choices collapse potential realities into defined outcomes. The mirror room’s mechanics reflect quantum entanglement—decisions ripple outward, shaping the entire environment.</p>
+  <p>Rooted in the myth of Narcissus, the simulation examines self-reflection and transformation. Stepping into a mirror alters the game world, mirroring the psychological process of introspection: understanding oneself to enact change. Narcissus is an experiential metaphor for the fluid relationship between the self and its surroundings.</p>
+  <p><b>Connections to Design</b></p>
+  <p>Narcissus explores design as an evolving dialogue between form, function, and interaction. By presenting ambiguous affordances such as doors that transform into mirrors, rooms that shift in scale and orientation, the simulation mirrors principles of interaction design, spatial design, and speculative architecture. Players intuitively construct and navigate spaces, revealing how perception shapes behavior and decision-making. Like experimental objects that challenge predefined uses, Narcissus invites users to interpret, adapt, and co-create their environments, offering insights into how design can provoke novel responses and reconfigure experience.</p>
   <!-- Button to go back to the homepage -->
   <br></br>
   <center><a href="index.html" class="about-button">return</a></center>
