--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Shantell+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+
   <link rel="preload" href="morphology.jpg" as="image">
   <link rel="preload" href="narcissus.jpg" as="image">
   <link rel="preload" href="todem.jpg" as="image">
