--- a/narcissus.html
+++ b/narcissus.html
@@ -8,20 +8,20 @@
 <body>
   <div class="content-container">
     <p>
-        <center><i>Narcissus</i></center>
+        <center><b>Narcissus</b></center>
     </p>
     <br>
     <div class="image-row">
         <img alt="default" src="narcissus-images/bigger.jpeg">
     </div>
   <p>
-    <b>Narcissus</b> is an interactive simulation in which personal choices manifest as architectural structures in real time. Players build their environments by passing through doors and mirrors, shaping their world through room alignments, rotations, and scale shifts. Each decision determines the evolving blueprint of their space.
+    Narcissus is an interactive simulation in which personal choices manifest as architectural structures in real time. Players build their environments by passing through doors and mirrors, shaping their world through room alignments, rotations, and scale shifts. Each decision determines the evolving blueprint of their space.
   </p>
 
   <p><b>Core Mechanics</b></p>
-  <p>I. <i>Rooms & Doors</i>: Each room has three doors—one expands the building, one loops back, and one transforms into a mirror</p>
-  <p>II. <i>Mirror Rooms</i>: Entering a mirror shifts dimensions, triggering changes in scale, rotation, or directional flow of ladders  </p>
-  <p>III. <i>Dimensional Shifts</i>: Nearly every action alters the simulation’s mechanics for a dynamic, evolving experience.  </p><br>
+  <p>I. <i>Rooms & Doors</i>: Each room has three doors; the one on the right expands the building, the left loops back, and the middle transforms into a mirror.</p>
+  <p>II. <i>Mirror Rooms</i>: Entering the mirror transports the user to a room with a mirror on each wall. Entering them triggers changes in scale, rotation, or directional flow of ladders. </p>
+  <p>III. <i>Dimensional Shifts</i>: Every action, except one, alters the simulation’s mechanics for a dynamic, evolving experience.  </p><br>
   <div class="image-row">
     <img alt="default" src="narcissus-images/mirror.jpg">
     </div>
