--- a/morphology.html
+++ b/morphology.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div class="content-container">
-  <p><center><i>Tactile Morphology</i></center></p>
-  <p><center>- <i>A Cyborg Manifesto</i></center></p>
-  <p>Tactile Morphology explores how ambiguous objects provoke novel user responses and behaviors. When presented with forms that deviate from expected functions, users must interpret and adapt, revealing patterns in cognition and interaction. My work investigates this process by designing objects where visual elements of organisms and machines coexist, borrowing affordances from branches, handles, buttons, and more. While these forms resemble familiar objects, they lack predefined functions, instead offering multiple possibilities for engagement.</p>
-  <p>I approach object design through a linguistic lens, treating borrowed elements as components of a sentence that users must make sense of. This process parallels research frameworks that identify problems and propose solutions, much like how users unconsciously resolve ambiguity when encountering undefined objects. Studying these responses can reveal cognitive biases and ergonomic insights valuable to product design.</p>
+  <p><center><b>Tactile Morphology</b></center></p>
+  <p><center><i>How can undefined or ambiguous objects reveal novel user responses and behavioral patterns? </i></center></p>
+  <p>When presented with forms that deviate from expected functions, users must interpret and adapt, revealing patterns in cognition and interaction. I design objects where visual elements of organisms and machines coexist, borrowing affordances from branches, handles, buttons, and more. While these forms resemble familiar objects, they lack predefined functions, instead offering multiple possibilities for engagement.</p>
+  <p>I approach object design through a linguistic lens, treating borrowed elements as components of a sentence that users must make sense of. This process parallels research frameworks that identify problems and propose solutions, much like how users unconsciously resolve ambiguity when encountering undefined objects. I believe studying  these responses can reveal cognitive biases and ergonomic insights valuable to product design.</p>
   <p>So far, my exploration has taken place within the studio, but I aim to deepen this research in a controlled setting. By measuring user interactions with objects that defy categorization, I hope to identify behavioral patterns that inform both design and industry applications. This inquiry is influenced by studies from the APEX Lab at the University of Chicago, aligning with broader methodologies that analyze human problem-solving in uncertain conditions.</p>
   <div class="image-row">
       <p>Figure 5.</p>
@@ -26,3 +26,4 @@
     
 </body>
 </html>
+
