hansel, narcissus, todem done

--- a/morphology.html
+++ b/morphology.html
@@ -8,21 +8,23 @@
 <body>
     <div class="content-container">
   <p><center><b>Tactile Morphology</b></center></p>
+  <div class="image-row"> <img alt="slinger" src="morphology-images/slinger.jpg"> </div>
   <p><center><i>How can undefined or ambiguous objects reveal novel user responses and behavioral patterns? </i></center></p>
+
   <p>When presented with forms that deviate from expected functions, users must interpret and adapt, revealing patterns in cognition and interaction. I design objects where visual elements of organisms and machines coexist, borrowing affordances from branches, handles, buttons, and more. While these forms resemble familiar objects, they lack predefined functions, instead offering multiple possibilities for engagement.</p>
+  
+  
   <p>I approach object design through a linguistic lens, treating borrowed elements as components of a sentence that users must make sense of. This process parallels research frameworks that identify problems and propose solutions, much like how users unconsciously resolve ambiguity when encountering undefined objects. I believe studying  these responses can reveal cognitive biases and ergonomic insights valuable to product design.</p>
+  <div class="image-row"> <img alt="print" src="morphology-images/print.jpg"> </div>
+  
   <p>So far, my exploration has taken place within the studio, but I aim to deepen this research in a controlled setting. By measuring user interactions with objects that defy categorization, I hope to identify behavioral patterns that inform both design and industry applications. This inquiry is influenced by studies from the APEX Lab at the University of Chicago, aligning with broader methodologies that analyze human problem-solving in uncertain conditions.</p>
-  <div class="image-row">
-      <p>Figure 5.</p>
-  </div>
-  <div class="image-row">
-    <img alt="painting1" src="morphology-images/instrument.jpg"> 
+  <div class="image-row"> <img alt="handheld" src="morphology-images/handheld.jpg"> </div>
+
+    <hr>
+    <p><a href="#cmnt_ref2">[b]</a> Here I want to indicate the "body" in essentialism--the entity has inherent and unchanging characteristics that define their fundamental nature. I change it to "physical body." Not sure if that makes sense? If not, we can use natural body.</p>
+    <br></br>
+    <center><a href="index.html" class="about-button">return</a></center>
     </div>
-      <hr>
-      <p><a href="#cmnt_ref2">[b]</a> Here I want to indicate the "body" in essentialism--the entity has inherent and unchanging characteristics that define their fundamental nature. I change it to "physical body." Not sure if that makes sense? If not, we can use natural body.</p>
-      <br></br>
-      <center><a href="index.html" class="about-button">return</a></center>
-      </div>
     
 </body>
 </html>
