--- a/relic.html
+++ b/relic.html
@@ -11,18 +11,37 @@
         <center><b>Relic</b></center>
     </p>
     
-    <div class="image-row"> <img alt="default" src="relic-images/relic.jpg"> </div>
+    <div class="image-row"> <img alt="default" src="relic-images/profile.jpg"> </div>
     
     <p>
         Relic brings together familiar spaces—dense cities, cinemas, bathrooms, caves—into a single sculptural form. Each scene exists at a distinct scale and plane, layering perspectives in a way that makes the object both intricate in content and compact in dimension.
     </p>
-
+ 
     <p>
         Blending physical and digital references, Relic functions as a spatial collage: part ruin, part monument, part imagined environment. It reinterprets everyday structures into something both immersive and unfamiliar, where scale and function feel at once disjointed and cohesive.    </p>
+
+    <p><center>Bathroom</center></p>
+    <div class="image-row"> <img alt="default" src="relic-images/bathroom.jpg"> </div>
+
+    <p><center>Cinema</center></p>
+    <div class="image-row"> <img alt="default" src="relic-images/cinema.jpg"> </div>
+
+    <p><center>Urban Skyline</center></p>
+    <div class="image-row"> <img alt="default" src="relic-images/urban.jpg"> </div>
 
     <p>
         As a hybrid structure, Relic offers different experiences on- and offline. It can be 3D printed as a sculptural object, allowing users to engage with its spaces through touch. In a digital simulation, it first appears as a framed object on a wall—until the viewer approaches, revealing it as a vast monument, its scale shifting through perception and distance.
     </p>
+
+    <p><center>Object in a Picture Frame</center></p>
+    <div class="image-row"> <img alt="default" src="relic-images/vr_frame.jpg"> </div>
+
+    <p><center>Monument at a Distance</center></p>
+    <div class="image-row"> <img alt="default" src="relic-images/vr_front.jpg"> </div>
+
+    <p><center>Simulation Map</center></p>
+    <div class="image-row"> <img alt="default" src="relic-images/vr_outside.jpg"> </div>
+
   <!-- Button to go back to the homepage -->
   <br></br>
   <center><a href="index.html" class="about-button">return</a></center>
