--- a/relic.html
+++ b/relic.html
@@ -14,13 +14,14 @@
     <div class="image-row"> <img alt="default" src="relic-images/profile.jpg"> </div>
     
     <p>
-        Relic brings together familiar spaces—dense cities, cinemas, bathrooms, caves—into a single sculptural form. Each scene exists at a distinct scale and plane, layering perspectives in a way that makes the object both intricate in content and compact in dimension.
+        Blending physical and digital references, Relic functions as a spatial collage: part ruin, part monument, part imagined environment. It reinterprets everyday structures into something both immersive and unfamiliar, where scale and function feel at once disjointed and cohesive. Each scene exists at a distinct scale and plane, layering perspectives in a way that makes the object both intricate in content and compact in dimension.
     </p>
  
     <p>
-        Blending physical and digital references, Relic functions as a spatial collage: part ruin, part monument, part imagined environment. It reinterprets everyday structures into something both immersive and unfamiliar, where scale and function feel at once disjointed and cohesive.    </p>
+        The name Relic stems from it being a souvenir for my time in New York—watching movies at the AMC, walking through the city and its galleries, and meditating in the bathtub. In future iterations, Relic can become a customizable artifact, shaped by an individual’s life and experiences. The placement and scale of different spaces could be arranged to reflect personal memories, values, and lifestyles, transforming it into a deeply personal monument.
+    </p>
 
-    <p><center>Bathroom</center></p>
+    <p><center>Bathtub with a Descending Staircase + Cars on the Road</center></p>
     <div class="image-row"> <img alt="default" src="relic-images/bathroom.jpg"> </div>
 
     <p><center>Cinema</center></p>
@@ -30,7 +31,15 @@
     <div class="image-row"> <img alt="default" src="relic-images/urban.jpg"> </div>
 
     <p>
-        As a hybrid structure, Relic offers different experiences on- and offline. It can be 3D printed as a sculptural object, allowing users to engage with its spaces through touch. In a digital simulation, it first appears as a framed object on a wall—until the viewer approaches, revealing it as a vast monument, its scale shifting through perception and distance.
+        As a hybrid structure, Relic offers different experiences on- and offline:
+    </p>
+
+    <p>
+        <b>Physical Form:</b> 3D printed as a sculptural object, allowing users to engage with its spaces through touch. 
+    </p>
+
+    <p>
+        <b>Digital Simulation:</b> Iniitally appearing as a framed on a wall - until the viewer approaches, at which it turns out to be a large monument, with its scale shifting through perception and distance.
     </p>
 
     <p><center>Object in a Picture Frame</center></p>
