--- a/about.html
+++ b/about.html
@@ -12,10 +12,8 @@
 <body>
     <div class="content-container">
         <h1 class="about-title">leeguhn</h1>
-        <p class="about-text">I am a 
+        <p class="about-text">My design practice explores systems and languages as frameworks for creating adaptable experiences. I focus on producing versatile interactions that allow people to engage with concepts from multiple perspectives. Whether through interface design, spatial layouts, or interactive environments, my work emphasizes modularity, clarity, and accessibility. By integrating digital and physical elements, I aim to craft experiences that are dynamic, layered, and open to interpretation.</p>
         
-        <br></br> Chat About sessions involve those who are MFA and MAPH candidates at the Departments of Visual Arts and Art History at the time of their participation. This website is dedicated to sessions that took place throughout the 2022 - 2023 academic year. For previous editions, please visit <a href="www.chatabout.info">www.chatabout.info</a>.
-        </p>
             
 
         <!-- Button to go back to the homepage -->
