--- a/immai.html
+++ b/immai.html
@@ -10,10 +10,10 @@
   <p><center><b>IMMAI (Immersive AI)</b></center></p>
   <div class="image-row"> <img alt="slinger" src="immai-images/intro.png"> </div>
 
-  <p>IMMAI is a mobile game currently in development to make language learning immersive and engaging through AI/ML technologies. The project integrates interactive gameplay with adaptive learning mechanics to create a personalized experience for users.
+  <p>IMMAI is a mobile game currently in development to make language learning immersive and engaging through AI/ML technologies. The team consists of 6 front & backend engineers and me as the artist and designer, contributing to the project when available. We are integrating interactive gameplay with adaptive learning mechanics to create a personalized experience for users.
     </p>    
   
-  <p>As the sole UI/UX Designer & Artist, I focus on shaping the user experience of IMMAI. My contributions include:
+  <p>As the Art & UI+UX Designer, my contributions include:
     </p> 
     
     <p>
