--- a/immai.html
+++ b/immai.html
@@ -8,21 +8,25 @@
 <body>
     <div class="content-container">
   <p><center><b>IMMAI (Immersive AI)</b></center></p>
-  <div class="image-row"> <img alt="slinger" src="immai-images/intro.png"> </div>
+  <div class="image-row"> <img alt="immai" src="immai-images/intro.png"> </div>
 
   <p>IMMAI is a mobile game currently in development to make language learning immersive and engaging through AI/ML technologies. The team consists of 6 front & backend engineers and me as the artist and designer, contributing to the project when available. We are integrating interactive gameplay with adaptive learning mechanics to create a personalized experience for users.
     </p>    
   
-  <p>As the Art & UI+UX Designer, my contributions include:
+  <p><center>As the Art & UI+UX Designer, my contributions include:</center>
     </p> 
     
     <p>
-        <b>UI/UX Design:</b> Crafting intuitive interfaces to ensure seamless navigation and accessibility.
+        <center><b>UI/UX Design:</b> Crafting intuitive interfaces to ensure seamless navigation and accessibility.
     </p>
+
+    <div class="image-row"> <img alt="ui" src="immai-images/ui.png"> </div>
 
     <p>
         <b>Art Direction:</b> Developing the visual style, including character designs, icons, and environments.
     </p>
+
+    <div class="image-row"> <img alt="mouth" src="immai-images/npc.png"> </div>
 
     <p>
         <b>Collaboration with Programmers:</b> Aligning UI/UX elements with AI-driven language-learning features to create a cohesive experience.
@@ -31,6 +35,9 @@
     <p>
         <b>Asset Generation Strategy:</b> Conceptualizing a system to dynamically generate assets as the game's scope expands.
     </p>
+
+    <div class="image-row"> <img alt="exercises" src="immai-images/exercise.png"> </div>
+
     
   <p>I prioritize accessibility, engagement, and adaptability in my design process, ensuring that IMMAI remains both visually compelling and functionally effective for learners at various proficiency levels.</p>
 
