--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <img src="relic.jpg" class="draggable" id="relic" data-href="relic.html">
       <img src="hansel.jpg" class="draggable" id="hansel" data-href="hansel.html">
       <img src="immai.jpg" class="draggable" id="immai" data-href="immai.html">
-      <img src="trip.jpg" class="draggable" id="trip" data-href="trip.html">
+      <img src="trip.jpg" class="draggable" id="trip" data-href="https://simonkim.nyc/trip">
+      
   </div>
   
   <script src="script.js">
